# touzi

./: .gitignore  AGENTS.md  A股中长期交易研究与审计系统_Codex最终框架.md  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: daily-picks.yml  market-intelligence.yml  pages.yml
.openai/: hosting.json
app/: globals.css  layout.tsx  page.tsx
app/investment-platform/: LivePlatform.tsx  layout.tsx  page.tsx  platform.module.css
artifacts/research/: demo-package.json
audit-a-share-research/: SKILL.md
audit-a-share-research/agents/: openai.yaml
audit-a-share-research/references/: a-share-market-rules.md  audit-policy.md  data-contract.md  external-skill-policy.md  research-workflow.md
audit-a-share-research/scripts/: audit_gates.py  check_backtest_bias.py  check_point_in_time.py  emit_verdict.py  validate_canonical_data.py
config/: data_sources.yaml  research_horizons.yaml  risk_policy.yaml
docs/: daily-picks.json  implementation-plan.md  index.html  market-intelligence.json  threat-model.md
docs/investment-platform/: index.html
lib/: threeWave.ts
lib/market-data/: eastmoney.ts  intelligence-sources.mjs  tencent-history.ts  tencent.ts
public/: daily-picks.json  market-intelligence.json
schemas/: canonical_market_record.schema.json
scripts/: backtest-three-wave.mjs  update-daily-picks.mjs  update-market-intelligence.mjs
tests/: investment-platform.test.mjs  live-market-data.test.mjs  market-intelligence.test.mjs  rendered-html.test.mjs  test_audit.py  test_cli.py  test_tencent_adapter.py  test_validation.py  three-wave.test.mjs
(+20 files in other folders)
